@startuml
interface pl.mat.client.TwitterClient {
~ void startFetchProcess()
}
class pl.mat.client.FetchThread {
- String invalidMessageStart
- TwitterTweetProcessor twitterMessageProcessor
- ExecutorService executorService
- BasicClient client
- BlockingQueue<String> stringLinkedBlockingQueue
+ void run()
- void processMessage(String)
- void processIncomingTextMessage(String)
}
class pl.mat.model.dto.MessageDto {
- String id
- Long createdAt
- String text
}
class pl.mat.model.db.Tweet {
- String messageId
- Long createdAt
- String text
- Long quoteCount
- Long replyCount
- Long retweetCount
- Long favoriteCount
- String authorId
- Long authorCreatedAt
- String authorScreenName
- Long authorFollowersCount
- Long authorStatusesCount
+ {static} Tweet initFromMessage(Message)
}
interface pl.mat.repository.TweetRepository {
}
interface pl.mat.service.RunningService {
~ void startProcess()
}
class pl.mat.filter.TweetFilter {
- {static} long EIGHT_DAYS_MILLIS
+ {static} boolean isValid(Message)
- {static} boolean isSignificantTweet(Message)
- {static} boolean isPostedRecently(Message)
}
class pl.mat.model.twitter.User {
- String id
- Date createdAt
- String screenName
- Long followersCount
- Long statusesCount
}
class pl.mat.controller.TestController {
- TweetRepository tweetRepository
+ List<Tweet> listTweets()
}
interface pl.mat.processor.TwitterTweetProcessor {
~ void processStringMessage(String)
}
class pl.mat.config.TwitterConfig {
- String apiKey
- String apiSecret
- String token
- String tokenSecret
- String searchTerm
+ OAuth1 authentication()
+ BlockingQueue<String> blockingQueue()
+ List<String> searchTerms()
}
class pl.mat.client.TwitterClientImpl {
- TwitterTweetProcessor twitterMessageProcessor
- Authentication authentication
- BlockingQueue<String> stringLinkedBlockingQueue
- List<String> searchTerms
+ void startFetchProcess()
- FetchThread createFetchThread(ExecutorService)
}
class pl.mat.model.dto.AuthorDto {
- String id
- Long createdAt
- String name
- String screenName
- List<MessageDto> messageDtos
- Long nMessages
}
class pl.mat.service.ScheduledServiceImpl {
- TwitterClient twitterClient
+ void startProcess()
}
class pl.mat.config.MongoConfig {
+ MongoClient mongoClient(String)
}
class pl.mat.model.twitter.Message {
- String id
- Message retweetedStatus
- Date createdAt
- String text
- User user
- String lang
- Long quoteCount
- Long replyCount
- Long retweetCount
- Long favoriteCount
}
class pl.mat.processor.TwitterTweetProcessorImpl {
- {static} Gson gson
- TweetRepository tweetRepository
+ void processStringMessage(String)
}
class pl.mat.TwifferApplication {
- RunningService runningService
+ {static} void main(String[])
+ void run(String)
}


pl.mat.client.Thread <|-- pl.mat.client.FetchThread
org.springframework.data.mongodb.repository.MongoRepository <|-- pl.mat.repository.TweetRepository
pl.mat.client.TwitterClient <|.. pl.mat.client.TwitterClientImpl
pl.mat.service.RunningService <|.. pl.mat.service.ScheduledServiceImpl
pl.mat.processor.TwitterTweetProcessor <|.. pl.mat.processor.TwitterTweetProcessorImpl
org.springframework.boot.CommandLineRunner <|.. pl.mat.TwifferApplication
@enduml